# Self-Driving-Car

CarlaLaneDetect/: CMakeLists.txt  package.xml
CarlaLaneDetect/src/: laneDetect.cpp  saveImage.cpp
carla/: slippery_test.py
carla-ros-bridge/catkin_ws/src/carla_ros_bridge/: README.md
carla-ros-bridge/catkin_ws/src/carla_ros_bridge/config/: settings.yaml
carla-ros-bridge/catkin_ws/src/carla_ros_bridge/launch/: README.md  carla_ros_bridge_with_example_ego_vehicle.launch
carla-ros-bridge/catkin_ws/src/carla_ros_bridge/src/carla_ros_bridge/: actor.py  bridge.py  communication.py  vehicle.py
carla/PythonAPI/examples/: tutorial_lidartest.py
carlaVision/: CMakeLists.txt  README.md  package.xml
carlaVision/launch/: carla_vision.launch
carlaVision/src/: lanedetect.cpp
carla_v_0_9_8_docs/: README.md  The_Client.md  The_World.md
xycar/: driving.py
